			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.02p: *********************************

************************* Version 8.02o: *********************************

BUG: (06/13/05, DN) Some changes are not undoable yet. They don't cause saving library.
FIX: Undo.otherChange() method to mark library for save.

IMP: (06/13/05, DN) When writing ELIB/ReadableDump, round arc angle to nearest. 

IMP: (06/12/05, DN) lowLevelAllocate/lowLevelPopulate methods removed from "ArcInst" and "Export".

BUG: (06/12/05, DN) Sometimes "LibDirs.LibDirFileSystemView.getFiles" causes
     "ClassNotFoundException".
FIX: Create factory method "LibDirs.newLibDirsFileSystemView".

IMP: (06/10/05, SMR) Can now import "GDS map" files to set layer associations (Bug #355).

IMP: (06/10/05, SMR) GDS now uses a "type" with each layer number (Bug #356).

BUG: (06/10/05, SMR) Spice output writes lower-level cells when upper-level ones
     have model file overrides (Bug #358).
FIX: Added model file overrides to the things checked by "skipCellAndSubcells()".

BUG: (06/10/05, GVG) Expection in NodeInst.findPortInstFromProto if index is invalid (Bug #359)
FIX: Make sure index is in the valid range and returns null otherwise.
     Side effect: extra code in Export.java to prevent exception if pi == null.

BUG: (06/09/05, GVG) Exception while generating eps from waveform (Bug #361)
FIX: After refactoring of Technology.getShapeOfNode, wnd can be null and then direct access
     of wnd.getVarContext() will generate the exception.

IMP/MAN (06/09/05, GVG) Move area coverage tool under DRC menu

IMP/MAN (06/09/05, JKG) Added command Tools->Cadence->Import Assura DRC Errors.

BUG: (06/9/05, GVG) Overlap not checked correctly when node was in a subcell (Bug #352)
FIX: TSMCRules.getRule() was not getting the correct min size for default case.